descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2016-07-XX  Release 7.26.2                                     ---
----------------------------------------------------------------------

* changed ogl & wgl framebuffer delayed write behavior - Sean Morrison
* upgraded libpng to version 1.6.23 - Cliff Yapp
* upgraded freetype to version 2.6.5 - Cliff Yapp
* upgraded zlib to version 1.2.8 - Cliff Yapp
* fix rtedge foreground/background color options - Jon Engbert
* allow ranges of 0-255 or 0.0-1.0 in rt/rtedge -C option - Jon Engbert


----------------------------------------------------------------------
--- 2016-08-08  Release 7.26.0                                     ---
----------------------------------------------------------------------

This major release of BRL-CAD culminates several years of development
effort to provide robust explicit boundary representation (BREP)
Non-uniform Rational Basis Spline (NURBS) import and ray tracing
analysis support.  Compared to previous polygonal mesh (BoT) methods,
NURBS offer superior interoperability with other CAD systems, faithful
shape-preserving import, and significantly reduced model sizes.  NURBS
may be imported from the ISO STEP (AP203) and Rhino 3DM file formats,
both with improved hierarchy preservation and entity support.

Unprecedented in BRL-CAD's history, this release initiates steps to
significantly reduce complexity and improve usability.  Many features
are being consolidated, reorganized, and removed via BRL-CAD's
deprecation process.  There are widespread documentation system
enhancements including new manual pages, improved command usage,
better help facilities, and more.

This release introduces the 'gcv' and 'icv' tools for geometry and
image conversion respectively.  These plugin-architecture tools are